--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -46,11 +46,6 @@
   justify-content: center;
 }
 
-.graph {
-  width: 1000px;
-  height: 400px;
-}
-
 .card-grid,
 .hero,
 .overview-grid {
